--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JAQLIV Profile</title>
+    <title>Lttd Profile</title>
     <style>
         * {
             margin: 0;
@@ -1029,4 +1029,5 @@
 </body>
 
 </html>
+
 
